[package]
name = "sixtyfps-app"
version = "0.1.0"
authors = ["Rasmus Vermeulen <rasmus_vermeulen@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
sixtyfps = "0.0.4"
glob = "0.3.0"
tokio = { version = "0.3", features = ["full"] }

[build-dependencies]
sixtyfps-build = "0.0.4"